# youtube_transcribe

./: .gitignore  1_download.py  2_ai_transcribe.py  3_google_transcribe.py  README.md  pyproject.toml  text_to_file.py
